--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -37,7 +37,7 @@
   vertical-align: baseline;
 }
 
-.create-plant-disease-button-container {
+.floating-create-button {
   display: inline-block;
   margin-right: 1.5em;
 }
