--- a/app/views/disease_warnings.scala.html
+++ b/app/views/disease_warnings.scala.html
@@ -5,6 +5,10 @@
     <div class="sample col-md-8 col-md-offset-2">
         <div class="row data">
         </div>
+
+        <span class="floating-create-button pull-right">
+            <a href="@routes.PlantDiseaseController.createModel()" class="btn btn-info btn-fab create-plant-disease" ><i class="material-icons">grade</i></a>
+        </span>
     </div>
 
     @helper.requireJs(core = routes.AssetsController.lib("requirejs/require.js").url,
