disease warning form edited to normal data

--- a/app/views/disease_warnings.scala.html
+++ b/app/views/disease_warnings.scala.html
@@ -7,7 +7,7 @@
         </div>
 
         <span class="floating-create-button pull-right">
-            <a href="@routes.PlantDiseaseController.createModel()" class="btn btn-info btn-fab create-plant-disease" ><i class="material-icons">grade</i></a>
+            <a href="@routes.DiseaseWarningController.createWarning()" class="btn btn-info btn-fab create-disease-warning" ><i class="material-icons">grade</i></a>
         </span>
     </div>
 
