--- a/app/views/disease_warnings/create_warning.scala.html
+++ b/app/views/disease_warnings/create_warning.scala.html
@@ -1,11 +1,12 @@
-@(diseaseWarningForm: Form[forms.DiseaseWarningForm.Data])(implicit request: RequestHeader, messages: Messages, loggedUser: User)
+@(diseaseWarningForm: Form[forms.DiseaseWarningForm.Data], plantDiseaseModels: Seq[(String, String)])(implicit request: RequestHeader, messages: Messages, loggedUser: User)
 @import b3.inline.fieldConstructor
 
 @templates.logged(Messages("create.disease.warning.title"), tab = "diseaseWarnings") {
     <div class="col-md-8 col-md-offset-2">
         <h4>@Messages("create.disease.warning.title")</h4>
         @helper.form(action = routes.DiseaseWarningController.submit(), 'class -> "disease-warning-form") {
-            @b3.select(diseaseWarningForm("paramId"), options = PlantDiseaseCondition.weatherParameters(messages), '_label -> Messages("plant.disease.select.condition"), 'required -> "true")
+            @b3.select(diseaseWarningForm("modelId"),
+                options = plantDiseaseModels, '_label -> Messages("plant.disease.model.select"), 'required -> "true")
             <submit type="submit" class="btn btn-raised btn-primary create-disease-warning">Save changes</submit>
             <a href="@routes.PlantDiseaseController.index()" class="btn btn-default">Back to list</a>
         }
