--- a/app/views/disease_warnings/disease_warnings.scala.html
+++ b/app/views/disease_warnings/disease_warnings.scala.html
@@ -1,9 +1,28 @@
 @()(implicit request: RequestHeader, messages: Messages, loggedUser: User)
-@import b3.inline.fieldConstructor
 
 @templates.logged(Messages("disease.warnings.title"), tab = "diseaseWarnings") {
-    <div class="sample col-md-8 col-md-offset-2">
+    <div class="col-md-8 col-md-offset-2">
         <div class="row data">
+            <div class="col-md-4 col-md-offset-1">
+                <div class="panel panel-danger">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">@messages("disease.warnings.triggered")</h3>
+                    </div>
+                    <div class="panel-body">
+                        Panel content
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">@messages("disease.warnings.set")</h3>
+                    </div>
+                    <div class="panel-body">
+                        Panel content
+                    </div>
+                </div>
+            </div>
         </div>
 
         <span class="floating-create-button pull-right">
