models with warnings are displayed in panels

--- a/app/views/disease_warnings/disease_warnings.scala.html
+++ b/app/views/disease_warnings/disease_warnings.scala.html
@@ -1,4 +1,4 @@
-@()(implicit request: RequestHeader, messages: Messages, loggedUser: User)
+@(triggeredWarnings: Seq[(DiseaseWarning, PlantDiseaseModel)], warningsSet: Seq[(DiseaseWarning, PlantDiseaseModel)])(implicit request: RequestHeader, messages: Messages, loggedUser: User)
 
 @templates.logged(Messages("disease.warnings.title"), tab = "diseaseWarnings") {
     <div class="col-md-8 col-md-offset-2">
@@ -9,7 +9,29 @@
                         <h3 class="panel-title">@messages("disease.warnings.triggered")</h3>
                     </div>
                     <div class="panel-body">
-                        Panel content
+                        @for((warning, diseaseModel) <- triggeredWarnings) {
+                            <div class="list-group-item plant-disease-model">
+                                <div class="plant-disease-icon-container">
+                                    <div class="row-action-primary plant-disease-icon">
+                                        <i class="material-icons icons-lg">local_florist</i>
+                                    </div>
+                                </div>
+                                <div class="row-content plant-disease-content">
+                                    <h4 class="list-group-item-heading">
+                                    @diseaseModel.name
+                                    </h4>
+                                    <p class="list-group-item-text">
+                                    @if(diseaseModel.description.isEmpty) {
+                                        @messages("plant.disease.models.description.empty")
+                                    } else {
+                                        @diseaseModel.description
+                                    }
+                                    </p>
+
+                                </div>
+                            </div>
+                            <div class="list-group-separator"></div>
+                        }
                     </div>
                 </div>
             </div>
