--- a/app/views/disease_warnings/disease_warnings.scala.html
+++ b/app/views/disease_warnings/disease_warnings.scala.html
@@ -1,4 +1,4 @@
-@(triggeredWarnings: Seq[PlantDiseaseModel], warningsSet: Seq[PlantDiseaseModel])(implicit request: RequestHeader, messages: Messages, loggedUser: User)
+@(triggeredWarnings: Seq[PlantDiseaseModel], notTriggeredWarnings: Seq[PlantDiseaseModel])(implicit request: RequestHeader, messages: Messages, loggedUser: User)
 
 @templates.logged(Messages("disease.warnings.title"), tab = "diseaseWarnings") {
     <div class="col-md-8 col-md-offset-2">
@@ -33,7 +33,21 @@
                         <h3 class="panel-title">@messages("disease.warnings.set")</h3>
                     </div>
                     <div class="panel-body">
-                        Panel content
+                    @for(diseaseModel <- notTriggeredWarnings) {
+                        <div class="list-group-item plant-disease-model-in-panel">
+                            <div class="plant-disease-icon-container-in-panel">
+                                <div class="row-action-primary plant-disease-icon">
+                                    <i class="material-icons icons-lg">local_florist</i>
+                                </div>
+                            </div>
+                            <div class="row-content plant-disease-content-in-panel">
+                                <h4 class="list-group-item-heading">
+                                @diseaseModel.name
+                                </h4>
+                            </div>
+                        </div>
+                        <div class="list-group-separator"></div>
+                    }
                     </div>
                 </div>
             </div>
