removed useless samples call to query all elements

--- a/app/views/samples.scala.html
+++ b/app/views/samples.scala.html
@@ -1,4 +1,4 @@
-@(samples: Seq[models.Sample])(implicit messages: Messages, loggedUser: User)
+@()(implicit messages: Messages, loggedUser: User)
 
 @templates.logged(Messages("samples.title"), tab = "samples") {
     <div class="sample col-md-8 col-md-offset-2">
