current weather now displays last sample

--- a/app/views/templates/default.scala.html
+++ b/app/views/templates/default.scala.html
@@ -16,7 +16,7 @@
                     <a href="@routes.SampleController.index">@Messages("samples.title")</a>
                 </li>
                 <li class="@("active".when(tab == "weatherNow"))">
-                    <a href="@routes.SampleController.index">@Messages("weather.now.title")</a>
+                    <a href="@routes.WeatherNowController.index">@Messages("weather.now.title")</a>
                 </li>
                 <li class="@("active".when(tab == "diseaseWarnings"))">
                     <a href="@routes.DiseaseWarningController.index">@Messages("disease.warnings.title")</a>
