add condition translation

--- a/app/views/plant_disease_models/create_model.scala.html
+++ b/app/views/plant_disease_models/create_model.scala.html
@@ -10,7 +10,7 @@
             @b3.url(plantDiseaseModelForm("modelImageUrl"), '_label -> Messages("plant.disease.models.modelImageUrl"), 'class -> "form-control input-lg col-md-10")
             <div class="plant-disease-conditions">
                 <h5>For the plant disease model to work you must add at least one weather condition</h5>
-                <button type="button" class="btn btn-info create-plant-disease-condition">Add condition</button>
+                <button type="button" class="btn btn-info create-plant-disease-condition">@messages("add.condition")</button>
                 <ul class="condition-list">
                 </ul>
             </div>
