--- a/app/views/plant_disease_models/plant_models.scala.html
+++ b/app/views/plant_disease_models/plant_models.scala.html
@@ -1,5 +1,4 @@
 @(plantDiseaseModels: Seq[(PlantDiseaseModel, Seq[PlantDiseaseCondition])])(implicit request: RequestHeader, messages: Messages, loggedUser: User)
-@import b3.inline.fieldConstructor
 
 @templates.logged(Messages("plant.disease.models.title"), tab = "plantDiseaseModels") {
     <div class="sample col-md-8 col-md-offset-2">
@@ -17,6 +16,7 @@
                                 <h4 class="list-group-item-heading">
                                     @diseaseModel.name
                                 </h4>
+                                <div class="action-secondary"><a href="@routes.PlantDiseaseController.deleteDiseaseModel(diseaseModel.id.getOrElse(0).toString)"><i class="material-icons">delete</i></a></div>
                                 <div class="plant-disease-conditions">
                                     @for(condition <- diseaseConditions) {
                                         <div class="conditions-info">
