delete icon positioned in warnings

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -54,3 +54,13 @@
   display: inline-block;
   margin-right: 1.5em;
 }
+
+.delete-warning {
+  position: absolute;
+  top: 12px;
+  right: 8px;
+}
+
+.delete-icon {
+  font-size: 1.4em;
+}
