--- a/app/views/disease_warnings/disease_warnings.scala.html
+++ b/app/views/disease_warnings/disease_warnings.scala.html
@@ -1,4 +1,4 @@
-@(triggeredWarnings: Seq[PlantDiseaseModel], notTriggeredWarnings: Seq[PlantDiseaseModel])(implicit request: RequestHeader, messages: Messages, loggedUser: User)
+@(triggeredWarnings: Seq[PlantDiseaseModel], notTriggeredWarnings: Seq[(DiseaseWarning, PlantDiseaseModel)])(implicit request: RequestHeader, messages: Messages, loggedUser: User)
 
 @templates.logged(Messages("disease.warnings.title"), tab = "diseaseWarnings") {
     <div class="col-md-8 col-md-offset-2">
@@ -33,7 +33,7 @@
                         <h3 class="panel-title">@messages("disease.warnings.set")</h3>
                     </div>
                     <div class="panel-body">
-                    @for(diseaseModel <- notTriggeredWarnings) {
+                    @for((warning, diseaseModel) <- notTriggeredWarnings) {
                         <div class="list-group-item plant-disease-model-in-panel">
                             <div class="plant-disease-icon-container-in-panel">
                                 <div class="row-action-primary plant-disease-icon">
@@ -41,6 +41,12 @@
                                 </div>
                             </div>
                             <div class="row-content plant-disease-content-in-panel">
+                                <div class="action-secondary delete-warning">
+                                    <a href="@routes.DiseaseWarningController.deleteWarning(warning.id.getOrElse(0).toString)">
+                                        <i class="material-icons delete-icon">delete</i>
+                                    </a>
+                                </div>
+
                                 <h4 class="list-group-item-heading">
                                 @diseaseModel.name
                                 </h4>
