floating button hidden for not admins

--- a/app/views/plant_disease_models/plant_models.scala.html
+++ b/app/views/plant_disease_models/plant_models.scala.html
@@ -1,5 +1,5 @@
 @(plantDiseaseModels: Seq[(PlantDiseaseModel, Seq[PlantDiseaseCondition])])(implicit request: RequestHeader, messages: Messages, loggedUser: User)
-
+@import views.html.tags._
 @templates.logged(Messages("plant.disease.models.title"), tab = "plantDiseaseModels") {
     <div class="sample col-md-8 col-md-offset-2">
         <div class="row data">
@@ -43,9 +43,12 @@
                         <div class="list-group-separator"></div>
                     }
                 </div>
-                <span class="floating-create-button pull-right">
-                    <a href="@routes.PlantDiseaseController.createModel()" class="btn btn-success btn-fab create-plant-disease" ><i class="material-icons">grade</i></a>
-                </span>
+                @withService() {
+                    <span class="floating-create-button pull-right">
+                        <a href="@routes.PlantDiseaseController.createModel()" class="btn btn-success btn-fab create-plant-disease" ><i class="material-icons">
+                            grade</i></a>
+                    </span>
+                }
             </div>
         </div>
     </div>
