--- a/app/views/tags/withService.scala.html
+++ b/app/views/tags/withService.scala.html
@@ -1,4 +1,4 @@
-@(anyOf: String*)(body: Html)(implicit loggedUser: User)
+@()(body: Html)(implicit loggedUser: User)
 @if(utils.WithService.isAuthorized(loggedUser)) {
 	@body
 }
