--- a/app/views/tags/withServiceOrElse.scala.html
+++ b/app/views/tags/withServiceOrElse.scala.html
@@ -1,4 +1,4 @@
-@(anyOf: String*)(body: Html)(orElseBody: Html)(implicit loggedUser: User)
+@()(body: Html)(orElseBody: Html)(implicit loggedUser: User)
 @if(utils.WithService.isAuthorized(loggedUser)) {
 	@body
 } else {
