--- a/app/views/weatherStations.scala.html
+++ b/app/views/weatherStations.scala.html
@@ -1,22 +1,27 @@
 @(weatherStations: Seq[models.WeatherStation])(implicit messages: Messages, loggedUser: User)
 
 @templates.logged(Messages("weather.stations.title"), tab = "weatherStations") {
-    <div class="weatherStation col-md-6 col-md-offset-3">
-        <div class="row">
-            <hr class="col-md-12" />
-            <div class="col-md-4 text-right">
-            </div>
-            <hr class="col-md-12" />
-        </div>
-        <div class="row data">
-            <div class="col-md-12">
-                <div class="row">
-                    <p class="col-md-6"><strong>@Messages("Weather station"):</strong></p>
-                    @for(station <- weatherStations) {
-                        <p class="col-md-6">@station</p>
-                    }
-                </div>
-            </div>
-        </div>
+    <div class="sample col-md-8 col-md-offset-2">
+        <h1>@messages("weather.stations.registered")</h1>
+        <table class="table table-striped table-hover ">
+            <thead>
+                <tr>
+                    <th>@messages("key")</th>
+                    <th>@messages("name")</th>
+                    <th>@messages("coordinatesX")</th>
+                    <th>@messages("coordinatesY")</th>
+                </tr>
+            </thead>
+            <tbody>
+                @for(station <- weatherStations) {
+                    <tr>
+                        <td>@station.key</td>
+                        <td>@station.name</td>
+                        <td>@station.coordinatesX</td>
+                        <td>@station.coordinatesY</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
     </div>
 }
