floating user creation button added

--- a/app/views/users.scala.html
+++ b/app/views/users.scala.html
@@ -20,6 +20,9 @@
                  </tr>
              }
              </tbody>
-         </table> 
+         </table>
+        <span class="floating-create-button pull-right">
+            <a href="@routes.SignUpController.view()" class="btn btn-danger btn-fab create-user" ><i class="material-icons">grade</i></a>
+        </span>
     </div>
 }
