--- a/app/views/signUp.scala.html
+++ b/app/views/signUp.scala.html
@@ -1,8 +1,8 @@
-@(signInForm: Form[forms.SignUpForm.Data])(implicit request: RequestHeader, messages: Messages, webJarAssets: WebJarAssets)
+@(signInForm: Form[forms.SignUpForm.Data])(implicit request: RequestHeader, messages: Messages, webJarAssets: WebJarAssets, loggedUser: User)
 
 @import b3.inline.fieldConstructor
 
-@templates.default(Messages("sign.up.title"), tab="signUp") {
+@templates.logged(Messages("sign.up.title"), tab="signUp") {
     @request.flash.get("error").map { msg =>
         <div class="col-md-6 col-md-offset-3 alert alert-danger alert-error">
             <a href="#" class="close" data-dismiss="alert">&times;</a>
@@ -10,7 +10,7 @@
         </div>
     }
     <fieldset class="col-md-6 col-md-offset-3">
-        <legend>@Messages("sign.up.account")</legend>
+        <legend>@Messages("user.invite")</legend>
         @helper.form(action = routes.SignUpController.submit()) {
             @helper.CSRF.formField
             @b3.text(signInForm("firstName"), '_hiddenLabel -> Messages("first.name"), 'placeholder -> Messages("first.name"), 'class -> "form-control input-lg")
@@ -18,7 +18,7 @@
             @b3.text(signInForm("email"), '_hiddenLabel -> Messages("email"), 'placeholder -> Messages("email"), 'class -> "form-control input-lg")
             <div class="form-group">
                 <div>
-                    <button id="submit" type="submit" value="submit" class="btn btn-lg btn-primary btn-block">@Messages("sign.up")</button>
+                    <button id="submit" type="submit" value="submit" class="btn btn-lg btn-primary btn-block">@Messages("user.invite")</button>
                 </div>
             </div>
         }
