--- a/app/views/users.scala.html
+++ b/app/views/users.scala.html
@@ -1,16 +1,22 @@
-@(users: Seq[User])(implicit messages: Messages, loggedUser: User)
+@(users: Seq[User])(implicit messages: Messages, request: RequestHeader, loggedUser: User)
 
 @templates.logged(Messages("users.title"), tab = "users") {
+    @request.flash.get("info").map { msg =>
+        <div class="col-md-6 col-md-offset-3 alert alert-success ">
+            <a href="#" class="close" data-dismiss="alert">&times;</a>
+            <strong>@Messages("success")</strong> @msg
+        </div>
+    }
     <div class="sample col-md-8 col-md-offset-2">
         <h1>@messages("users")</h1>
-         <table class="table table-striped table-hover "> 
-             <thead> 
-                 <tr> 
+         <table class="table table-striped table-hover ">
+             <thead>
+                 <tr>
                      <th>@messages("first.name")</th>
                      <th>@messages("last.name")</th>
                      <th>@messages("email")</th>
-                 </tr> 
-             </thead> 
+                 </tr>
+             </thead>
              <tbody>
                  @for(user <- users) {
                  <tr>
