--- a/app/views/weatherStations.scala.html
+++ b/app/views/weatherStations.scala.html
@@ -23,5 +23,8 @@
                 }
             </tbody>
         </table>
+        <span class="floating-create-button pull-right">
+            <a href="@routes.SignUpController.view()" class="btn btn-danger btn-fab create-user" ><i class="material-icons">grade</i></a>
+        </span>
     </div>
 }
